tests/models/enum/named/f32/fail/expected.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(expected = "val")]
        value: f32
    },
}
fn main() {}
